--- a/Elastic_Logtash_Kibana.ipynb
+++ b/Elastic_Logtash_Kibana.ipynb
@@ -1603,6 +1603,46 @@
    "source": [
     "![image.png](attachment:image.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "67f6e405",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=\"http://localhost:5601/app/dashboards#/view/e1b8e900-7e1c-11ee-937c-a7b5bffd7dbe?embed=true&_g=(refreshInterval:(pause:!t,value:60000),time:(from:now-15m,to:now))&_a=()\" height=\"600\" width=\"1000\"></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import HTML\n",
+    "\n",
+    "# Define the URL for the Kibana dashboard\n",
+    "kibana_dashboard_url = \"http://localhost:5601/app/dashboards#/view/e1b8e900-7e1c-11ee-937c-a7b5bffd7dbe?embed=true&_g=(refreshInterval:(pause:!t,value:60000),time:(from:now-15m,to:now))&_a=()\"\n",
+    "\n",
+    "# Generate the HTML code for the iframe\n",
+    "iframe_html = f'<iframe src=\"{kibana_dashboard_url}\" height=\"600\" width=\"1000\"></iframe>'\n",
+    "\n",
+    "# Display the iframe in the Jupyter Notebook\n",
+    "display(HTML(iframe_html))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9519a164",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
